# ethereum-proofs

./: Cargo.toml  README.md  rust-toolchain.toml
src/: eip1186.rs  hasher.rs  lib.rs  node_codec.rs  types.rs  utils.rs
tests/: Cargo.toml
tests/data/: proof_data.json  trace_data.json
tests/src/: lib.rs
