[package]
name = "ethereum-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
rlp = { version = "0.5.2", default-features = false }
trie-db = { version = "0.28.0", default-features = false }
hash-db = { version = "0.16.0", default-features = false }
tiny-keccak = { version = "2.0.0", default-features = false, features = ["keccak"] }
memory-db = { version = "0.32.0", default-features = false }
log = "0.4.20"

[features]
default = ["std"]
std = ["trie-db/std", "hash-db/std", "rlp/std", "memory-db/std"]
